--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,7 @@
         <div class="container-fluid">
            <div class="row">
             <div class="col-md-6" id="left">
+                <div id="left_side">
                 <div class="row">
                     <div class="col-md-12">
                         <h5 style="text-align: center;" id="warn">The bot is under construction, might produce irrelevant outputs.</h5>
@@ -47,8 +48,8 @@
                         <div class="row">
                             <div class="col-md-8" id="user_inp">
                                 <div class="form-group">
-                                    <input class="form-control" id="prompt" rows="1" name="prompt" required="True" placeholder="Try asking my contact details..."></input>
-                                  </div>
+                                    <input type="text" class="form-control" id="prompt" rows="1" name="prompt" required="True" placeholder="Try asking my contact details..."></input>
+                                </div>
                             </div>
                             <div class="col-md-4" id="user_sub">
                                 <button class="btn btn-primary btn-dark" id="buttonsub" type="button">Chat</button>
@@ -64,6 +65,7 @@
                 </div>
                 </div>
             </div>
+        </div>
             <div class="col-md-6  move-up" id="right">
                 <div class="col-md">
                     <h2>Hello 👋 , I am</h2>
