--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,8 @@
                
     </head>
     <body>
-        <div class="container-fluid">
+        <h1 style="text-align:center">The site is Currently under maintaince. Thank you for your patience.</h1>
+<!--         <div class="container-fluid">
            <div class="row">
             <div class="col-md-6" id="left">
                 <div id="left_side">
@@ -78,6 +79,6 @@
                 </div>
             </div>
            </div> 
-        </div>
+        </div> -->
     </body>
 </html>
