--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-        <link href="{{url_for('static',path='/css/style.css')}}" rel="stylesheet">        
+        <link href="{{url_for('static',path='/css/style.css')}}" rel="stylesheet">    
+        <meta http-equiv="refresh" content="0; URL='http://ec2-15-206-78-68.ap-south-1.compute.amazonaws.com:5000'">    
         <script>
             $(document).ready(function(){
                 $('#buttonsub').click(function(){
@@ -31,54 +32,6 @@
                
     </head>
     <body>
-        <h1 style="text-align:center">The site is Currently under maintaince. Thank you for your patience.</h1>
-<!--         <div class="container-fluid">
-           <div class="row">
-            <div class="col-md-6" id="left">
-                <div id="left_side">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h5 style="text-align: center;" id="warn">The bot is under construction, might produce irrelevant outputs.</h5>
-                    </div>
-                </div>
-                <div class="row">
-                <div id="chatbot">
-                    <div id="chatscreen">
-
-                    </div>
-                    <div id="inputs">
-                        <div class="row">
-                            <div class="col-md-8" id="user_inp">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" id="prompt" rows="1" name="prompt" required="True" placeholder="Try asking my contact details..."></input>
-                                </div>
-                            </div>
-                            <div class="col-md-4" id="user_sub">
-                                <button class="btn btn-primary btn-dark" id="buttonsub" type="button">Chat</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <p id="modelname">ShivanshAI - v1.0</p>
-                </div>
-                </div>
-            </div>
-        </div>
-            <div class="col-md-6  move-up" id="right">
-                <div class="col-md">
-                    <h2>Hello 👋 , I am</h2>
-                    <h1>Shivansh Kumar!! 👨‍💻😎</h1>
-                    <p>Talk to my Virtual version, <span style="color: blueviolet;font-weight: bolder;">ShivanshAI 🤖</span> and it will tell you everything about me!!!</p>
-                    <div class="down_icon">
-                        <div class="icon"><a href="#left"><i class="bi bi-chevron-down d-sm-inline d-md-none"></i></a></div>
-                    </div>         
-                </div>
-            </div>
-           </div> 
-        </div> -->
+        <h1>Please wait while we redirect you to the Website...</h1>
     </body>
 </html>
